# Wheelchair-ergometer

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  run_ergometer.py
ergometer/: __init__.py  daq.py  data_manager.py  protocol.py  visualization.py
results/: W4_isometric_20260619_144502.csv  W4_isometric_20260619_161137.csv  W4_isometric_20260619_210435.csv  W4_isometric_20260619_213329.csv  W4_isometric_20260619_215458.csv  W4_isometric_20260619_221038.csv  W4_sprint_20260619_213724.csv  W4_sprint_20260619_215843.csv  W4_summary_20260619_214246.csv  W4_summary_20260619_220245.csv  W4_summary_20260619_233155.csv  W4_warmup_20260619_131440.csv  W4_warmup_20260619_144200.csv  W4_warmup_20260619_155320.csv  W4_warmup_20260619_160836.csv  W4_warmup_20260619_164235.csv  W4_warmup_20260619_164305.csv  W4_warmup_20260619_210134.csv  W4_warmup_20260619_213018.csv  W4_warmup_20260619_215149.csv  W4_warmup_20260619_220727.csv  W4_warmup_20260622_110826.csv  W4_wingate_20260619_214143.csv
