[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wheelchair-ergometer"
version = "1.0.0"
description = "Open-source wheelchair ergometer control and data acquisition software for SCI exercise testing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Hyunji Kim", email = "hyunji94@snu.ac.kr" },
]
keywords = [
    "wheelchair ergometer",
    "spinal cord injury",
    "exercise assessment",
    "rehabilitation engineering",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
hardware = ["labjackpython>=2.1.0"]

[project.scripts]
run-ergometer = "run_ergometer:main"

[project.urls]
Repository = "https://github.com/HyunjiKimv/Wheelchair-ergometer"
